fixed z-index issue

--- a/src/css/recipe-edit.css
+++ b/src/css/recipe-edit.css
@@ -4,6 +4,7 @@
 	position: fixed;
 	top: 0;
 	right: 0;
+	margin-top: 1rem;
 	max-height: 100%;
 	overflow-y:auto; 
 }
